2010-04-08  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver.cpp (CompilerDriver::copyFailoverInterface):
	see #1394  there is no need to add a copy of member interface objects
	to the cluster anymore.

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::_expand_interface):
	fixes #1394 Using existing virtual functions that expand multiple
	addresses to expand cluster interfaces. Added parameter bool
	expand_cluster_interfaces_fully to _expand_addr,
	_expand_addr_recursive and _expand_interface. Now expanding
	cluster interface in the Compiler::_expand_interface instead of
	PolicyCompiler_ipt::_expand_interface. Now it is possible to
	use interface of another cluster in rules (interface of a cluster
	object different from the one being compiled).

	* ProjectPanel_file_ops.cpp (ProjectPanel::exportLibraryTest):
	fixed #1395 "routing rules are not reported properly while
	exporting library"

	* configlets/linux24/update_addresses: fixed #1391 "function
	getaddr_internal does not work with point-to-point interfaces".
	In fact, fwbuilder v3 and v4 can not manage ip addresses of
	point-to-point interfaces. This fix makes generated script skip
	such interfaces and do not try to add, remove or change their ip
	addresses. Proper support for address management of point-to-point
	interfaces will be added in the future versions of the program.

2010-04-07  vadim  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (IPTImporter::pushPolicyRule): see #1390 'update
	iptables importer to recognize rules with "-i intf -o intf"'

2010-04-01  vadim  <vadim@vk.crocodile.org>

	* src/res/os/dd-wrt-nvram.xml: Added direct support for DD-WRT
	in two modes: nvram and jffs

2010-04-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* AddressRangeDialogTest.cpp (AddressRangeDialogTest::initTestCase):
	fixed #1366 - fixed unit test for AddressRangeDialog class

2010-03-29  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_iosacl_writers.cpp (PrintRule::_printRItf):