@@ -1,3 +1,8 @@
+2010-04-08  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* interfacePropertiesObjectFactory.cpp: fixed #1396, SF bug 2984193
+	Vlan error when OpenWrt is selected as host
+
 2010-04-08  vadim  <vadim@vk.crocodile.org>
 
 	* CompilerDriver.cpp (CompilerDriver::copyFailoverInterface):
